ansible/kubernetes/adguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # This must match the name of the service we just fixed!
            name: adguard-home-http
            port:
              number: 80
